<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="co.etornam.thebakingapp.Activities.NoInternetActivity">

	<Button
		android:id="@+id/tryAgainBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="48dp"
		android:background="@drawable/button_round"
		android:padding="15dp"
		android:text="@string/try_again"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="36dp"
		android:layout_marginEnd="8dp"
		android:text="@string/no_connection"
		android:textAppearance="?android:textAppearanceLarge"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="wrap_content"
		android:layout_height="200dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="28dp"
		android:layout_marginEnd="8dp"
		android:contentDescription="@string/avarta"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView"
		android:src="@drawable/ic_sleep" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="28dp"
		android:layout_marginEnd="8dp"
		android:text="@string/no_internt_desc"
		android:textAlignment="center"
		android:textAppearance="?textAppearanceSearchResultTitle"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>