<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:id="@+id/mainLayout"
    android:padding="@dimen/widget_margin">

    <FrameLayout
        android:id="@+id/widget_framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/widget_placeholder"
            android:contentDescription="@string/avarta"/>

        <TextView
            android:id="@+id/widget_Recipe_name_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="0dp"
            android:paddingEnd="15dp"
            android:paddingStart="40dp"
            android:paddingBottom="4dp"
            android:background="@drawable/widget_recipe_name"
            android:gravity="center"
            tools:text="@string/recipe_name"
            android:textSize="31sp" />

        <TextView
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_autorenew" />

    </FrameLayout>


    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:alpha="0.8"
        android:layout_below="@+id/widget_framelayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

</RelativeLayout>